shop filter added

--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
         </section>
 
         <section id="shopping-card" class="hidden">
-            <div id="shop-filter">
-                dfdfgdg
+            <div id="shop-filter" class="hidden">
+                <h5>Choose shop / shops</h5>
+                <div id="shop-list">
+                </div>
+                <div>
+                    <button id="setFilterBtn" class="btn">Filter</button>
+                    <button id="resetFilterBtn" class="btn">Reset</button>
+                </div>
+
             </div>
             <button id="new-entry-shopping-btn" class="new-entry-btn btn">New entry</button>
             <div id="new-entry-shopping" class="new-entry hidden">
@@ -83,7 +90,7 @@
                 <div id="items-list-head">
                     <div>ITEM</div>
                     <div>AMOUNT</div>
-                    <div>SHOP</div>
+                    <div id="shopFilterBtn">SHOP</div>
                     <div>ACTION</div>
                 </div>
             </section>
