--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </section>
 
                 <div id="language">
-                    <a><img id="en-lang-btn" src="images/usa.jpg" alt="" /></a>
+                    <a><img id="en-lang-btn" src="images/gb.jpg" alt="" /></a>
                     <a><img id="pl-lang-btn" src="images/pl.jpg" alt="" /></a>
                 </div>
             </main>
