--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         <h5 cont="Choose_shops">Choose shops</h5>
                         <div id="shop-list"></div>
                         <div id="filter-buttons">
-                            <button id="setFilterBtn" class="btn" cont="Filter">
-                                Filter
+                            <button id="setFilterBtn" class="btn" cont="Apply">
+                                Apply
                             </button>
                             <button
                                 id="resetFilterBtn"
@@ -207,11 +207,11 @@
                     <section id="items-list" class="">
                         <div id="items-list-head">
                             <div cont="ITEM">ITEM</div>
-                            <div cont="AMOUNT">AMOUNT</div>
+                            <div cont="AMOUNT">Q</div>
                             <div id="shopFilterBtn" cont="SHOP">
                                 <u>SHOP</u>
                             </div>
-                            <div cont="DEL">DEL</div>
+                            <div cont="DEL">🗑</div>
                         </div>
                     </section>
                 </section>
